--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1896,14 +1896,14 @@ textarea.form-input::-webkit-resizer { display: none; }
   display: flex;
   align-self: center;
   font-size: 1rem;
-  font-weight: 400;
+  /* font-weight: 400; */
   line-height: 1;
   margin: 20px;
   padding: 1.0em 0.9em;
   text-decoration: none;
   text-align: center;
   text-transform: uppercase;
-  font-family: 'Montserrat', sans-serif;
+  font-family: var(--ff-poppins);
   font-weight: 900;
     border-color: var(--orange-yellow-crayola);
     color: #000000;
